--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body{
 }
 
 h1{
-    text-aligh: center;
+    text-align: center;
     color: rgb(253, 253, 253);
     padding: 30px;
     font-size: 2rem;
